@@ -119,6 +119,9 @@ Harley-Davidson (Bally, L-2 and D-2)
 Haunted House (rev. 3 unofficial MOD)
 Haunted House (rev. 3 unofficial MOD, LED)
 Haunted House (rev. 3 unofficial MOD, LED+Secret Tunnel)
+Haunted House (rev. 4 unofficial Votrax speech MOD, misses the sound dumps though!)
+Haunted House (rev. 4 unofficial Votrax speech MOD, LED, misses the sound dumps though!)
+Haunted House (rev. 4 unofficial Votrax speech MOD, LED+Secret Tunnel, misses the sound dumps though!)
 Hollywood Heat (Free Play)
 Hollywood Heat (French)
 Hollywood Heat (French Free Play)
